--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>La boda de Mayte y Edu</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -116,6 +116,31 @@
                     <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
                     <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Dress Code Section -->
+    <section id="dresscode" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Dress Code</h2>                
+            </div>            
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="img/marylin.jpg" class="img-rounded center-block" alt="Marilyn en traje de baño..." />
+            </div>
+            <div class="col-md-6">                
+                <p style="margin-top: 40px">
+                    Estas son las normas de vestimenta:
+                </p>
+                <p>
+                    ¡Atencíón, <strong>chicas</strong>! Por primera vez podeís asistir a una boda de color blanco, ¡ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una.
+                </p>
+                <p>
+                    Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. ¡Nada de copiarse!                    
+                </p>                
             </div>
         </div>
     </section>
