Terminada sección Trasportes. Cambiado color de links. Añadidos acutes, y otros pequeños ajustes.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             </div>
             <!-- /.container -->
         </nav>
-
         <!-- Intro Header -->
         <header class="intro">
             <div class="intro-body">
@@ -73,7 +72,7 @@
                         <div class="col-md-6 col-md-offset-6">
                             <div class="opac">
                                 <h1 class="brand-heading">¡Mayte y Edu se casan!</h1>
-                                <p class="intro-text">Será el 25 de Julio de 2015<br>Aquí puedes consultar toda la información sobre su boda</p>
+                                <p class="intro-text">Ser&aacute; el 25 de Julio de 2015<br>Aqu&iacute; puedes consultar toda la informaci&oacute;n sobre su boda</p>
                             </div>
                             <a href="#who" class="btn btn-circle page-scroll">
                                 <i class="fa fa-angle-double-down animated"></i>
@@ -83,7 +82,6 @@
                 </div>
             </div>
         </header>
-
         <!-- Who Section -->
         <section id="who" class="container content-section text-center">
             <div class="row">
@@ -114,7 +112,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Wedding Section -->
         <section id="wedding" class="content-section text-center">
             <div class="content-bk-section">
@@ -125,10 +122,11 @@
                 </div>
                 <div class="container opac">
                     <div class="col-lg-4 col-lg-offset-2 text-left">
-                        <p>Lugar: Parador de Alcalá de Henares <br/>
+                        <p>Lugar: Parador de Alcal&aacute; de Henares <br/>
+                        (Colegio de Santo Tomas) <br/>
                         Calle de los Colegios, 8 <br/>
-                        Alcalá de Henares, Madrid </p>
-                        <p class="text-center">
+                        Alcal&aacute; de Henares, Madrid </p>
+                        <p class="text-left">
                         <a class="btn btn-default btn-lg" href="https://goo.gl/maps/chOqP" target="_blank">
                             Mapa
                         </a>
@@ -146,7 +144,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Dress Code Section -->
         <section id="dresscode" class="container content-section text-center">
             <div class="container">
@@ -156,14 +153,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <img src="img/marylin.jpg" class="img-rounded center-block" alt="Marilyn en traje de baño..." />
+                    <img src="img/marylin.jpg" class="img-rounded center-block" alt="Marilyn en traje de ba&ntilde;o..." />
                 </div>
                 <div class="col-lg-4">
                     <p style="margin-top: 40px">
                     Estas son las normas de vestimenta:
                     </p>
                     <p>
-                    ¡Atencíón, <strong>chicas</strong>! Por primera vez podeís asistir a una boda de color blanco, ¡ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una.
+                    ¡Atenc&iacute;&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, ¡ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una.
                     </p>
                     <p>
                     Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. ¡Nada de copiarse!
@@ -182,15 +179,32 @@
                 </div>
             </div>
         </section>
-
         <!-- Transport Section -->
         <section id="transport" class="container content-section text-center">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Transporte</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nisi lorem, ultrices vel dictum sit amet, dictum gravida nunc. Nunc metus leo, imperdiet eu aliquam id, tristique sed magna. Maecenas ac dui ac enim laoreet ornare. Integer rutrum risus eros, ac eleifend diam tempus at. Nulla maximus maximus velit, rutrum ultricies lacus volutpat at. Nulla est urna, tempus et tortor sit amet, auctor venenatis tortor. Curabitur volutpat porttitor fermentum. Suspendisse nec lectus quis neque venenatis lobortis.</p>
-                    <p>Morbi consectetur augue mi. Aenean lobortis condimentum odio. Aliquam neque metus, placerat eu consequat vel, tincidunt non ipsum. Cras sagittis risus dolor, sed posuere est viverra vel. Nunc placerat ac mauris cursus pulvinar. Aliquam vitae venenatis erat. Curabitur pretium mollis risus. Fusce a diam nec nisi pulvinar maximus sed id lorem. Nam suscipit tellus lobortis ante luctus, et fermentum tellus sodales. Nam auctor volutpat diam, eu mattis neque eleifend sed.</p>
-                    <p>Praesent eleifend purus ullamcorper, placerat libero feugiat, tincidunt felis. Aliquam sit amet leo ultrices, varius ipsum nec, consequat dui. Sed tincidunt purus velit. Phasellus dolor arcu, tristique id dictum efficitur, luctus ut quam. Proin a accumsan ex. In elementum, risus quis lacinia fermentum, lacus risus cursus diam, facilisis sagittis purus elit in mauris. Pellentesque ut nisi purus. Vestibulum eros sapien, ullamcorper sed ex venenatis, iaculis blandit ex. Praesent luctus fermentum tincidunt.</p>
+                    <div class="text-left">
+                        <p>
+                        El parador de se encuentra en pleno centro de Alcal&aacute; de Henares. <br/>
+                        Como llegar:
+                        </p>
+                        <p><strong>En coche:</strong> Desde Madrid, por la A2 direcci&oacute;n Zaragoza, tomando la salida 23 para entrar en Alcal&aacute;. Ruta de ejemplo desde Madrid centro: <a href="https://goo.gl/maps/DAsVb" target="_blank">Mapa</a> <br/>
+                        Si venis direcci&oacute;n Madrid (por ejemplo desde Tarragona, Zaragoza...), entrad a Alcal&aacute; pro la salida 36 de la A2. Ruta de ejemplo desde Tarragona: <a href="https://goo.gl/maps/Cf2Uf" target="_blank">Mapa</a>
+                        </p>
+                        <p><strong>En cercanias (Renfe):</strong> Desde Madrid se puede llegar a Alcal&aacute; en cercanias por las lineas C2 y C7. Desde la estaci&oacute;n de cercanias son 15 minutos andando hasta el parador: <a href="https://goo.gl/maps/INuPz" target="_blank">Mapa</a>
+                        </p>
+                        <p><strong>En autobus:</strong> Desde Madrid hay varias rutas de autobus a Alcal&aacute;, principalmente desde Avenida Am&eacute;rica. Lineas: 223, 227, 229 M&aacute;s informaci&oacute;n, <a href="http://www.ayto-alcaladehenares.es/portalAlcala/contenedor1.jsp?seccion=s_fdes_d4_v1.jsp&amp;codbusqueda=454&amp;codResi=1&amp;codMenuPN=2&amp;codMenuSN=195&amp;codMenuTN=380&amp;codMenu=480" target="_blank">aqu&iacute;</a>.
+                        </p>
+                        <p><strong>Recomendaciones para la vuelta (a Madrid):</strong> Si no quieres dormir en Alcal&aacute;, ni coger el coche para volver, hay varias opciones:
+                        <br/>
+                         - Autobus N202 (nocturno), a Avenida Am&eacute;rica: <a href="http://www.ctm-madrid.es/servlet/RedTransServlet?xh_ACCION=0&amp;xh_TIPO=30&amp;xh_PAGINA=8&amp;xh_COMODIN=202&amp;nocturnas.x=54&amp;nocturnas.y=6" target="_blank">Horarios y paradas</a>
+                        <br/>
+                         - Resto de lineas de autobus (ver link m&aacute;s arriba). Los primeros suelen salir sobre las 5:30 de la ma&ntilde;ana.
+                        <br/>
+                         - Cercanias: El primer tren hacia Madrid sale sobre las 05:53 de la ma&ntilde;ana (Ver ruta desde el parador, andando, m&aacute;s arriba)                        
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -207,8 +221,6 @@
         <script src="js/bootstrap.min.js"></script>
         <!-- Plugin JavaScript -->
         <script src="js/jquery.easing.min.js"></script>
-        <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
         <!-- Custom Theme JavaScript -->
         <script src="js/grayscale.js"></script>
     </body>
