Comenzada sección alojamientos. Otros fixes.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     Estas son las normas de vestimenta:
                     </p>
                     <p>
-                    ¡Atenc&iacute;&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, ¡ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una.
+                    ¡Atenci&oacute;n, <strong>chicas</strong>! Por primera vez pode&iacute;s asistir a una boda de color blanco, ¡ya que el vestido de la novia va a ser <strong>ROJO</strong>!. Ya sabeis que Marilyn solo hay una.
                     </p>
                     <p>
                     Para los <strong>chicos</strong>: ojo, es probable que el novio vaya de blanco o casi blanco. ¡Nada de copiarse!
@@ -174,8 +174,20 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Alojamientos</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mauris dui, commodo ac lorem eget, facilisis semper tortor. Cras malesuada lacus non dolor dictum iaculis. Pellentesque commodo lorem nec magna bibendum aliquet. Pellentesque at finibus sem. Fusce et ante et nunc auctor sodales. Nam ac auctor ligula. Vestibulum vitae tincidunt tortor, a blandit turpis. Nulla sollicitudin fringilla dolor eget vehicula. Fusce eu tellus aliquet, tempor eros id, finibus nisi. Aliquam id ultricies risus. Quisque malesuada, risus at ultricies convallis, ligula ex vehicula metus, in vulputate ex odio in mauris. Cras congue efficitur odio vel rutrum. Etiam a sapien auctor velit tincidunt posuere vel et enim.</p>
-                    <p>Donec sit amet ultricies purus. Etiam iaculis ullamcorper sagittis. Maecenas accumsan dolor vitae orci posuere aliquam. In suscipit lacus ligula, ut ornare enim dictum et. Nulla pretium metus in justo consectetur, id porttitor sem rutrum. Cras maximus feugiat ipsum, non ornare lectus gravida id. Cras elit metus, rutrum ac varius ut, varius eu nibh. Morbi neque metus, finibus finibus tristique non, vestibulum mattis felis. Vestibulum sit amet ex finibus, scelerisque purus vel, bibendum neque. Nullam in sodales nunc. Quisque sit amet massa in ante eleifend venenatis. Integer finibus, tellus sed interdum iaculis, libero turpis iaculis.</p>
+                    <div class="text-left">
+                        <p>
+                        Hay varias opciones, estas que hemos buscado son las que parecen más interesantes:
+                        </p>
+                        <p>
+                            <strong>El parador: </strong> En el mismo parador hay una oferta para los invitados a la boda de 122 euros la noche, con desayuno (u oferta mejor si la hay en ese momento). Tan solo es necesario reservar en el parador diciendoles que venis a nuestra boda, y automaticamente os harán el descuento.
+                        </p>
+                        <p>
+                            <strong>Apartamentos Alcalá: </strong> <a href="http://apartamentosalcala.com/" target="_blank">apartamentosalcala.com</a> </br>
+                            Buenos precios desde 58€ a 83€ la noche dependiendo del número de personas. </br>
+                            Muy cerca del parador: son varios apartamentos, el más lejano a 8 minutos andando. </br>
+
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -190,7 +202,8 @@
                         Como llegar:
                         </p>
                         <p><strong>En coche:</strong> Desde Madrid, por la A2 direcci&oacute;n Zaragoza, tomando la salida 23 para entrar en Alcal&aacute;. Ruta de ejemplo desde Madrid centro: <a href="https://goo.gl/maps/DAsVb" target="_blank">Mapa</a> <br/>
-                        Si venis direcci&oacute;n Madrid (por ejemplo desde Tarragona, Zaragoza...), entrad a Alcal&aacute; pro la salida 36 de la A2. Ruta de ejemplo desde Tarragona: <a href="https://goo.gl/maps/Cf2Uf" target="_blank">Mapa</a>
+                        Si venis direcci&oacute;n Madrid (por ejemplo desde Tarragona, Zaragoza...), entrad a Alcal&aacute; pro la salida 36 de la A2. Ruta de ejemplo desde Tarragona: <a href="https://goo.gl/maps/Cf2Uf" target="_blank">Mapa</a><br/>
+                        Aparcamiento: en Alcalá, como en Madrid, el estacionamiento es regulado (de pago), pero los sabados es solo hasta las 15. Si llegais más tarde de las 15, podeís aparcar en cualquier zona (verde o azul) gratis. El domingo es gratis todo el día.
                         </p>
                         <p><strong>En cercanias (Renfe):</strong> Desde Madrid se puede llegar a Alcal&aacute; en cercanias por las lineas C2 y C7. Desde la estaci&oacute;n de cercanias son 15 minutos andando hasta el parador: <a href="https://goo.gl/maps/INuPz" target="_blank">Mapa</a>
                         </p>
