Comenzada sección quienes somos. Dos nuevas fotos.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Lorem ipsum dolor sit amet, facete probatus in cum. Vis noster mentitum percipit in. Quaeque consequuntur nec te, at vim mollis scribentur, pro adhuc expetenda molestiae cu. Ceteros inimicus petentium no duo, mei cu quis ludus legere. Purto graecis invidunt ne usu, tantas consetetur accommodare eam ex. Ne duo virtute detraxit posidonium, dicam volumus sit ex.
+                <div class="col-lg-5 col-lg-offset-1 text-left">
+                    <img src="img/eduPic.jpg" class="img-rounded left-block" alt="Edu" style='float:left;width:211px;height:201px; margin-right:10px;' />
+                    <p>Edu paso su infancía en Sigüenza, un pueblecito de Guadalajara. Alli creció y bla bla bla... hasta las pelotis de escribir esto.... me aburroooooooo... jodeeeeeer... petardazooooo....
                     </p>
                     <p>
                     Eu elitr solet eum, no mei zril blandit quaerendum. Mea eu idque officiis efficiantur, sed vivendo efficiantur te, ridens corpora oportere et mel. Dicant dolores id vim. Ex mucius eligendi lucilius sea, ex sed tale albucius liberavisse.
@@ -100,8 +101,9 @@
                     Detraxit reprimique in vis, per etiam euismod ut, vocibus torquatos has cu. Pri et veri rebum, per cu tale harum, honestatis definitionem pri ex. Et eos alii utroque laoreet. Quo impedit nusquam ea. Vix quidam equidem maluisset eu. Et justo utamur his, vim no porro mandamus.
                     </p>
                 </div>
-                <div class="col-lg-4">
-                    <p>Lorem ipsum dolor sit amet, vitae graecis sit at, eum elit essent electram ei, aperiam adolescens vel id. Bonorum persecuti philosophia no mel, cum no utinam officiis platonem, at eam delectus maluisset efficiendi. Timeam propriae forensibus mea an. Simul noluisse tincidunt qui ut, ius te graece accumsan. Cum simul vivendum no, ius ferri reque ut.
+                <div class="col-lg-5 text-left">
+                    <img src="img/maytePic.jpg" class="img-rounded left-block" alt="Mayte" style='float:left;width:234px;height:201px; margin-right:10px;' />
+                    <p>Mayte es una bla blab labla... rollo rollo rollo.... lorem impsum venga mas rollo y mas rollo... a aburrir al personal... a ver quien es el que llega a leer hasta aquí, no se lo cree nadie...
                     </p>
                     <p>
                     Docendi omittantur an his, ius porro apeirian ad. Vis te option percipit expetendis, an pri posidonium scripserit. Id est alii nihil, inermis suscipit consequat duo ea. Id his sumo adhuc eripuit.
