Varios fixes de errores en w3c validator

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                             <strong>El parador: </strong> En el mismo parador hay una oferta para los invitados a la boda de 122 euros la noche, con desayuno (u oferta mejor si la hay en ese momento). Tan solo es necesario reservar en el parador diciendoles que venis a nuestra boda, y automaticamente os harán el descuento.
                         </p>
                         <p>
-                            <strong>Apartamentos Alcalá: </strong> <a href="http://apartamentosalcala.com/" target="_blank">apartamentosalcala.com</a> </br>
-                            Buenos precios desde 58€ a 83€ la noche dependiendo del número de personas. </br>
-                            Muy cerca del parador: son varios apartamentos, el más lejano a 8 minutos andando. </br>
+                            <strong>Apartamentos Alcalá: </strong> <a href="http://apartamentosalcala.com/" target="_blank">apartamentosalcala.com</a> <br/>
+                            Buenos precios desde 58€ a 83€ la noche dependiendo del número de personas. <br/>
+                            Muy cerca del parador: son varios apartamentos, el más lejano a 8 minutos andando. <br/>
 
                         </p>
                     </div>
