Sección quienes somos, dividida y empezada.

--- a/index.html
+++ b/index.html
@@ -92,24 +92,39 @@
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 text-left">
                     <img src="img/eduPic.jpg" class="img-rounded left-block" alt="Edu" style='float:left;width:211px;height:201px; margin-right:10px;' />
-                    <p>Edu paso su infancía en Sigüenza, un pueblecito de Guadalajara. Alli creció y bla bla bla... hasta las pelotis de escribir esto.... me aburroooooooo... jodeeeeeer... petardazooooo....
+                    <p class="p-little">Edu paso su infancía en Sigüenza, un pueblecito de Guadalajara. Alli creció y bla bla bla... hasta las pelotis de escribir esto.... me aburroooooooo... jodeeeeeer... petardazooooo....
                     </p>
-                    <p>
+                    <p class="p-little">
                     Eu elitr solet eum, no mei zril blandit quaerendum. Mea eu idque officiis efficiantur, sed vivendo efficiantur te, ridens corpora oportere et mel. Dicant dolores id vim. Ex mucius eligendi lucilius sea, ex sed tale albucius liberavisse.
                     </p>
-                    <p>
+                    <p class="p-little">
                     Detraxit reprimique in vis, per etiam euismod ut, vocibus torquatos has cu. Pri et veri rebum, per cu tale harum, honestatis definitionem pri ex. Et eos alii utroque laoreet. Quo impedit nusquam ea. Vix quidam equidem maluisset eu. Et justo utamur his, vim no porro mandamus.
                     </p>
                 </div>
                 <div class="col-lg-5 text-left">
                     <img src="img/maytePic.jpg" class="img-rounded left-block" alt="Mayte" style='float:left;width:234px;height:201px; margin-right:10px;' />
-                    <p>Mayte es una bla blab labla... rollo rollo rollo.... lorem impsum venga mas rollo y mas rollo... a aburrir al personal... a ver quien es el que llega a leer hasta aquí, no se lo cree nadie...
+                    <p class="p-little">Mayte es una chica que nació en Puertollano una ciudad o 'pueblo' como le llama ella que valora esencialmente por sus grandes amigos, le encanta ir de tapeo con ellos (que buenas tapas ponen).
                     </p>
-                    <p>
-                    Docendi omittantur an his, ius porro apeirian ad. Vis te option percipit expetendis, an pri posidonium scripserit. Id est alii nihil, inermis suscipit consequat duo ea. Id his sumo adhuc eripuit.
+                    <p class="p-little"> 
+                    De niña paso su infancia jugando hacer ciudades con su hermano al que adora, llenaban la habitación de juguetes o ponian a los muñecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, ¡menuda paciencia la de su madre!.  
                     </p>
-                    <p>
-                    Per inani sensibus dissentiunt an, dolore omittam voluptatibus nec ei. Pri et mundi invidunt, mediocrem honestatis vel et. Dictas vivendum senserit ea mea, vim moderatius signiferumque an. An veritus eligendi sea.
+                    <p class="p-little">
+                    A Mayte le ha encantado siempre la lectura, siendo bien chica leia a shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la música y las peliculas y le indigan las tragedias de la vida y la injusticia social.
+                    </p>
+                    <p class="p-little">
+                    Estudio Informatica y esta terminado Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelecutalemente cuanto le sea posible. 
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h3>¿Cómo nos conocimos?</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <p class="p-little">
+                        El destino es caprichoso: Edu y Mayte, después de estar trabajando en el mismo edificio en ISBAN durante un tiempo, sin siquiera conocerse, acaban en la misma empresa, en el mismo cliente y proyecto
                     </p>
                 </div>
             </div>
