--- a/index.html
+++ b/index.html
@@ -92,13 +92,17 @@
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 text-left">
                     <img src="img/eduPic.jpg" class="img-rounded left-block" alt="Edu" style='float:left;width:211px;height:201px; margin-right:10px;' />
-                    <p class="p-little">Edu paso su infancía en Sigüenza, un pueblecito de Guadalajara. Alli creció y bla bla bla... hasta las pelotis de escribir esto.... me aburroooooooo... jodeeeeeer... petardazooooo....
+                    <p class="p-little">Edu paso su infancía en Sigüenza, un pueblecito de Guadalajara. Su gran aficción era la lectura, cuando era pequeño se pasaba tardes enteras en la biblioteca buscando su próximo libro a devorar, su madre tenía que regañarle para que no leyera mientras estaban en la mesa, jaja. Esa era su mayor travesura, ya que era un niño muy bueno.
                     </p>
                     <p class="p-little">
-                    Eu elitr solet eum, no mei zril blandit quaerendum. Mea eu idque officiis efficiantur, sed vivendo efficiantur te, ridens corpora oportere et mel. Dicant dolores id vim. Ex mucius eligendi lucilius sea, ex sed tale albucius liberavisse.
+                    Se fue a Madrid nada más cumplir los 18 años, para estudiar la carrera de Ing. Informática. Cuando la terminó, se puso a trabajar en la que hasta hoy día es su empresa, lo que habla de su caracter de seriedad, perseverancia y responsabilidad. 
+                    No le gustan los grandes cambios, su máxima es que cuando realmente se tiene todo lo que se busca, ¿qué sentido tiene cambiarlo?. 
                     </p>
                     <p class="p-little">
-                    Detraxit reprimique in vis, per etiam euismod ut, vocibus torquatos has cu. Pri et veri rebum, per cu tale harum, honestatis definitionem pri ex. Et eos alii utroque laoreet. Quo impedit nusquam ea. Vix quidam equidem maluisset eu. Et justo utamur his, vim no porro mandamus.
+                    Es una persona tierna, sincera , timida y muy fantasiosa. Sus grandes pasiones son correr para poder descargar energía y conservar su tipín de flaco y envolverse en sus escenarios de fantasia leyendo y  jugando, en sus pocos ratos libres en los que Mayte no le lia con hacer algo.
+                    </p>
+                    <p class="p-little">
+                        En definitiva es un friki de mucho cuidado.
                     </p>
                 </div>
                 <div class="col-lg-5 text-left">
@@ -106,13 +110,13 @@
                     <p class="p-little">Mayte es una chica que nació en Puertollano una ciudad o 'pueblo' como le llama ella que valora esencialmente por sus grandes amigos, le encanta ir de tapeo con ellos (que buenas tapas ponen).
                     </p>
                     <p class="p-little"> 
-                    De niña paso su infancia jugando hacer ciudades con su hermano al que adora, llenaban la habitación de juguetes o ponian a los muñecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, ¡menuda paciencia la de su madre!.  
+                    De niña paso su infancia jugando a hacer ciudades con su hermano al que adora, llenaban la habitación de juguetes o ponian a los muñecos a ver la tele (el cine como le llamaban ellos). Tenia mucho caracter (y tiene) y este le llevaba a salir corriendo cuando se pillaba un enfado, ¡menuda paciencia la de su madre!.  
                     </p>
                     <p class="p-little">
                     A Mayte le ha encantado siempre la lectura, siendo bien chica leia a shakespeare y le gustaba la poesia, quiza por ello es una mujer tierna y romantica, de gran sensibilidad, llora con la música y las peliculas y le indigan las tragedias de la vida y la injusticia social.
                     </p>
                     <p class="p-little">
-                    Estudio Informatica y esta terminado Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelecutalemente cuanto le sea posible. 
+                    Estudio Informatica y esta terminado Trabajo Social, tiene muchas inquietudes en la vida y ganas de poder seguir creciendo intelecutalemente cuanto le sea posible. No para quieta y sin tener un nuevo plan.
                     </p>
                 </div>
             </div>
@@ -122,9 +126,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-10 col-lg-offset-1 text-left">
                     <p class="p-little">
-                        El destino es caprichoso: Edu y Mayte, después de estar trabajando en el mismo edificio en ISBAN durante un tiempo, sin siquiera conocerse, acaban en la misma empresa, en el mismo cliente y proyecto
+                        Edu y Mayte, después de estar trabajando en el mismo edificio en ISBAN durante un tiempo, en la misma planta, sin siquiera conocerse, acaban en la misma empresa, en el mismo cliente y proyecto en un edificio en el norte Madrid.<br/>
+                        El primer día que Edu llega allí, no tiene sitio asígnado, así que se sienta temporalmente en el sitio de una chica que está de vacaciones, la cual es Mayte, por supuesto. El destino es caprichoso.<br/>
+                        Allí se conocen pero, como la vida real no es como los cuentos, ni caen enamorados a primera vista, ni nada de nada...
+                    </p>
+                    <p class="p-little">
+                        Después de unos "divertidisimos" meses en ese proyecto, más conocido por un número, maldito, que no nombraremos aquí para no invocar seres del averno, Edu sale (¡por fin!) de ese proyecto, y sus caminos vuelven a separarse... pero no por mucho tiempo. Meses más tarde, Mayte también sale 
                     </p>
                 </div>
             </div>
